# docs/swagger.yaml
@@ -624,10 +624,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/pb.FutureDetailList'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/pb.APIResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -648,10 +644,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/pb.OptionDetailList'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/pb.APIResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -672,10 +664,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/pb.StockDetailList'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/pb.APIResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -791,6 +779,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/structpb.ListValue'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/pb.APIResponse'
       security:
       - JWT: []
       summary: Get all trade records
@@ -1089,10 +1081,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/pb.TradeList'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/pb.APIResponse'
         "500":
           description: Internal Server Error
           schema:
